text alignment mostly corrected

--- a/src/styles/notes.css
+++ b/src/styles/notes.css
@@ -4,7 +4,7 @@
     text-align: center;
     border: solid #eee;
     box-shadow: 0 2px 2px #ccc;
-    width: 60%;
+    width: 90%;
     padding: 10px;
     flex-direction: row;
     justify-content: space-around;
@@ -59,3 +59,4 @@ button {
     font-family: 'Reenie Beanie', cursive;
     color: darkblue;
 }
+
